--- a/Enlaces3.html
+++ b/Enlaces3.html
@@ -8,8 +8,9 @@
     <H3> Realizamos envíos a domicilio según tu ubicación. Si no es posible, coordinamos un punto de encuentro o podés retirar tu pedido personalmente.</H3>
     <h2>Para consultas o pedidos, escribinos por Instagram:</h2>
     <a href="https://www.instagram.com/equilibrium.frutosecos?igsh=NWxidGo0Zmh6Y3Ay">Equilibrium.Frutosecos</a>
-    <h2>También podés comunicarte con nosotros por WhatsApp al  +54 9 261 217 8055</h2>
-    <h2>O Comunicarte al +54 9 261 554 8780</h2>
+    <h2>También podés comunicarte con nosotros por WhatsApp </h2>
+    <a>al  +54 9 261 217 8055</a>
+    <a>O al +54 9 261 554 8780</a>
     <body>
         <h3>Podés regresar al inicio o consultar nuestros precios.</h3>
         <a href="enlaces2.html">VARIEDADES Y PRECIOS</a>
