--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:description" content="Bienvenidos a EQUILIBRIUM: frutos secos puros, ricos y 100% naturales. Conocé nuestras variedades y precios." />
     
     <!-- Asegurate de que la imagen esté subida al repositorio y con URL accesible -->
-    <meta property="og:image" content="https://tutee11.github.io/Frutos-Secos-Equilibrium/Frutos secos - copia.jpg" />
+    <meta property="og:image" content="Frutos secos - copia.jpg" />
     <meta property="og:url" content="https://tutee11.github.io/-52163-/" />
     <meta property="og:type" content="website" />
 
