--- a/enlaces2.html
+++ b/enlaces2.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="estilos.css">
-        <title>Enlaces</title>
+        <title>EQUILIBRIUM</title>
     </head>
     <H1>¡ESTOS SON NUESTRO PRODUCTOS!
         <h1>Nueces</h1>
