--- a/index.html
+++ b/index.html
@@ -20,30 +20,7 @@
     <!-- META para mejor vista al compartir -->
     <meta property="og:title" content="¡EQUILIBRIUM! - Frutos Secos Naturales" />
     <meta property="og:description" content="Bienvenidos a EQUILIBRIUM: frutos secos puros, ricos y 100% naturales. Conocé nuestras variedades y precios." />
-    <meta property="og:image" content="https://tutee11.github.io/-52163-/frutos-secos.jpg" />
-    <meta property="og:url" content="https://tutee11.github.io/-52163-/" />
-    <meta property="og:type" content="website" />
-
-    <link rel="stylesheet" href="estilos.css">
-</head>
-<body>
-
-    <h1>¡EQUILIBRIUM!</h1>
-
-    <h2>"Bienvenidos a EQUILIBRIUM, donde la naturaleza se convierte en placer."</h2>
-
-    <p>En cada almendra, en cada nuez, en cada fruto seco que seleccionamos, llevamos el sabor puro, la energía natural y la calidad que merecés. Somos más que una marca: somos el puente entre el campo y tu mesa, comprometidos con ofrecerte lo mejor de la tierra, sin conservantes ni secretos, solo el verdadero sabor natural.</p>
-    
-    <a href="enlaces2.html" title="Esta es la segunda PÁGINA">NUESTRAS VARIEDADES Y PRECIOS</a>
-    
-    <p>¡Descubrí el snack perfecto para cada momento de tu día! Saludable, rico y 100% natural.</p>
-
-    <!-- Imagen al final -->
-    <img src="frutos-secos.jpg" alt="Frutos secos" style="width: 300px;">
-
-</body>
-</html>
-
+    <meta property="og:image" content="https://tutee11.github.io/-52163-/Frutos secos - copia.jpg" />
     <meta property="og:url" content="https://tutee11.github.io/-52163-/" />
     <meta property="og:type" content="website" />
 
@@ -66,3 +43,9 @@
 
 </body>
 </html>
+
+    <meta property="og:url" content="https://tutee11.github.io/-52163-/" />
+    <meta property="og:type" content="website" />
+
+    <link rel="stylesheet" href="estilos.css">
+</head>
