--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- META para mejor vista al compartir -->
     <meta property="og:title" content="¡EQUILIBRIUM! - Frutos Secos Naturales" />
     <meta property="og:description" content="Bienvenidos a EQUILIBRIUM: frutos secos puros, ricos y 100% naturales. Conocé nuestras variedades y precios." />
-    <meta property="og:image" content="https://tutee11.github.io/-52163-/Frutos secos-copia.jpg" />
+    <meta property="og:image" content="https://tutee11.github.io/-52163-/frutos-secos-copia.jpg" />
     <meta property="og:url" content="https://tutee11.github.io/-52163-/" />
     <meta property="og:type" content="website" />
 
@@ -39,7 +39,7 @@
     <p>¡Descubrí el snack perfecto para cada momento de tu día! Saludable, rico y 100% natural.</p>
 
     <!-- Imagen al final -->
-    <img src="Frutos secos - copia.jpg" alt="Frutos secos" style="width: 300px;">
+    <img src="frutos-secos-copia.jpg" alt="Frutos secos" style="width: 300px;">
 
 </body>
 </html>
