--- a/Enlaces3.html
+++ b/Enlaces3.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="estilos.css">
-        <title>Equilibrium</title>
+        <title>EQUILIBRIUM</title>
     </head>
     <h1>Encargos</h1>
     <H3> Realizamos envíos a domicilio según tu ubicación. Si no es posible, coordinamos un punto de encuentro o podés retirar tu pedido personalmente.</H3>
