--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
     <p>¡Descubrí el snack perfecto para cada momento de tu día! Saludable, rico y 100% natural.</p>
 
     <!-- Imagen al final -->
-    <img src="frutos-secos-copia.jpg" alt="Frutos secos" style="width: 300px;">
-
+    <img src="https://tutee11.github.io/Frutos-Secos-Equilibrium/frutos-secos-copia.jpg" alt="Frutos secos" style="width:300px;">
 </body>
 </html>
