--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <!-- META para mejor vista al compartir -->
     <meta property="og:title" content="¡EQUILIBRIUM! - Frutos Secos Naturales" />
     <meta property="og:description" content="Bienvenidos a EQUILIBRIUM: frutos secos puros, ricos y 100% naturales. Conocé nuestras variedades y precios." />
-    <meta property="og:image" content="https://tutee11.github.io/-52163-/frutos-secos-copia.jpg" />
-    <meta property="og:url" content="https://tutee11.github.io/-52163-/" />
+    <meta property="og:image" content="https://tutee11.github.io/Frutos-Secos-Equilibrium/frutos-secos-copia.jpg" />
+    <meta property="og:url" content="https://tutee11.github.io/Frutos-Secos-Equilibrium/" />
     <meta property="og:type" content="website" />
 
     <link rel="stylesheet" href="estilos.css">
