--- a/enlaces2.html
+++ b/enlaces2.html
@@ -6,6 +6,7 @@
     </head>
     <H1>¡ESTOS SON NUESTRO PRODUCTOS!
         <h1>Nueces</h1>
+        <p>(Chandler extra light)</p>
         <H2>1/4 kg (250gr) -- 4.500 $</H2>
         <H2>1/2 kg (500gr) -- 9.000 $</H2>
         <H2>1kg -- 18.000 $</H2>
@@ -14,6 +15,7 @@
         <H2>1/2 kg (500gr) -- 19.800 $</H2>
         <H2>1kg -- 39.600 $</H2>
         <h1>Almendras</h1>
+        <p>Non pareil)</p>
         <H2>1/4 (250gr) -- 5.500 $</H2>
         <H2>1/2 (500gr) -- 11.000 $</H2>
         <H2>1kg -- 22.000 $</H2>
@@ -23,6 +25,7 @@
         <H2>1/2 (500gr) -- 7000 $</H2>
         <H2>1 kg -- 14.000 $</H2>
         <h1>Pasas de Uva</h1>
+        (Morena flame)
         <H2>1/4 (250gr) -- 1.400 $</H2>
         <H2>1/2 (500gr) -- 2.800 $</H2> 
         <H2>1 kg -- 5.600 $</H2>  
