--- a/enlaces2.html
+++ b/enlaces2.html
@@ -15,7 +15,7 @@
         <H2>1/2 kg (500gr) -- 19.800 $</H2>
         <H2>1kg -- 39.600 $</H2>
         <h1>Almendras</h1>
-        <p>Non pareil)</p>
+        <p>(Non pareil)</p>
         <H2>1/4 (250gr) -- 5.500 $</H2>
         <H2>1/2 (500gr) -- 11.000 $</H2>
         <H2>1kg -- 22.000 $</H2>
